--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ envlist =
 
 [testenv]
 install_command = python -m pip install --no-cache-dir {opts} {packages}
+deps = pytest >= 5.2.0
 
 commands_pre =
     python -m gt4py.gt_src_manager install
