Put back code, enforce >=

--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,7 @@ install_requires =
     jinja2~=2.10
     numpy~=1.15
     pybind11~=2.4
+    pytest>=5.2
     tabulate~=0.8
     typing-extensions~=3.7
     click~=7.1
