--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,7 +21,7 @@ repos:
     rev: 3.8.4
     hooks:
     - id: flake8
-      additional_dependencies: ["flake8-mutable", "flake8-fixme", "flake8-docstrings", "flake8-rst-docstrings", "pygments", "flake8-eradicate", "flake8-debugger"]
+      additional_dependencies: ["flake8-mutable", "flake8-docstrings", "flake8-rst-docstrings", "pygments", "flake8-eradicate", "flake8-debugger"]
       exclude: >
           (?x)^(
           setup.py |
@@ -103,6 +103,11 @@ repos:
           tests/test_unittest/test_storage.py |
           tests/test_unittest/test_dawn_backends.py |
           tests/definition_setup.py |
+          tests/test_unittest/test_gtc/test_common.py |
+          tests/test_unittest/test_gtc/test_oir.py |
+          tests/test_unittest/test_gtc/gtir_utils.py |
+          tests/test_unittest/test_gtc/test_gtir_upcaster.py |
+          tests/test_unittest/test_gtc/test_gtir_to_oir.py |
           )$
 
 -   repo: https://github.com/pre-commit/pre-commit-hooks
