--- a/setup.cfg
+++ b/setup.cfg
@@ -49,6 +49,17 @@ install_requires =
     pybind11~=2.5
     tabulate~=0.8
     typing-extensions~=3.7
+    # ---- eve / gtc ----
+    boltons>=20.0
+    clang-format>=9.0
+    cytoolz>=0.11
+    devtools>=0.5
+    mako>=1.1
+    networkx>=2.4
+    packaging>=20.0
+    pydantic>=1.5
+    toolz>=0.11
+    xxhash>=1.4.4
 
 [options.packages.find]
 where = src
@@ -74,17 +85,6 @@ cuda102 =
     cupy-cuda102
 dawn =
     dawn4py@git+https://github.com/MeteoSwiss-APN/dawn.git@0.0.2#subdirectory=dawn
-gtc =
-    boltons>=20.0
-    clang-format>=9.0
-    cytoolz>=0.11
-    devtools>=0.5
-    mako>=1.1
-    networkx>=2.4
-    packaging>=20.0
-    pydantic>=1.5
-    toolz>=0.11
-    xxhash>=1.4.4
 testing =
     hypothesis>=4.14
     pytest~=6.1
