--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [tool.black]
 line-length = 99
-target_version = ['py36', 'py37', 'py38']
+target_version = ['py38']
 include = '\.pyi?$'
 exclude = '''
 /(
