improve on pre-commit checks

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,7 +25,6 @@ classifiers =
     Operating System :: POSIX
     Programming Language :: Python
     Programming Language :: Python :: 3.8
-    Programming Language :: Python :: 3.9
     Programming Language :: Python :: Implementation :: CPython
     Topic :: Scientific/Engineering :: Atmospheric Science
     Topic :: Scientific/Engineering :: Mathematics
@@ -116,10 +115,15 @@ warning-is-error = True
 [flake8]
 # Some sane defaults for the code style checker flake8
 max-line-length = 99
+doctests=true
 ignore =
     N802  # function name should be lowercase
     W503  # line break occurred before a binary operator
     D1    # public code object needs docstring
+    D     # Disable docstrings errors by default
+    E203  # Whitespace before ':' (black formatter breaks this sometimes)
+    E501  # Line too long (using Bugbear's B950 warning)
+
 exclude =
     .tox
     build
@@ -150,15 +154,15 @@ lines_after_imports = 2
 default_section = THIRDPARTY
 sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 known_first_party = eve,gtc,gt4py,__externals__,__gtscript__
-known_third_party = attr,black,cached_property,click,dataclasses,dawn4py,devtools,hypothesis,jinja2,numpy,pkg_resources,pybind11,pydantic,pytest,setuptools,tabulate,tests,typing_extensions
+known_third_party = attr,black,boltons,cached_property,click,dawn4py,devtools,hypothesis,jinja2,mako,numpy,packaging,pkg_resources,pybind11,pydantic,pytest,setuptools,tabulate,tests,typing_extensions,xxhash
 
 [mypy]
-allow_redefinition = True
 follow_imports = silent
 ignore_missing_imports = True
-show_column_numbers = True
-strict_optional = True
-warn_return_any = True
-warn_unused_configs = True
-warn_unused_ignores = True
-
+# TODO enable in a next step
+#allow_redefinition = True
+#show_column_numbers = True
+#strict_optional = True
+#warn_return_any = True
+#warn_unused_configs = True
+#warn_unused_ignores = True
