--- a/setup.cfg
+++ b/setup.cfg
@@ -104,11 +104,17 @@ warning-is-error = True
 
 [flake8]
 # Some sane defaults for the code style checker flake8
-max-line-length = 99
+max-line-length = 100
+max-complexity = 15
 ignore =
-    N802  # function name should be lowercase
-    W503  # line break occurred before a binary operator
-    D1    # public code object needs docstring
+    B008    # Do not perform function calls in argument defaults
+    D1      # Public code object needs docstring
+    DAR     # Disable dargling errors by default
+    E203    # Whitespace before ':' (black formatter breaks this sometimes)
+    E501    # Line too long (using Bugbear's B950 warning)
+    N802    # Function name should be lowercase
+    W503    # Line break occurred before a binary operator
+
 exclude =
     .tox
     build
@@ -130,7 +136,7 @@ rst-roles=
 skip_glob =
     *.venv/**
     _local/**
-line_length = 99
+line_length = 100
 force_grid_wrap = 0
 include_trailing_comma = true
 multi_line_output = 3
