--- a/setup.cfg
+++ b/setup.cfg
@@ -25,7 +25,6 @@ classifiers =
     Operating System :: POSIX
     Programming Language :: Python
     Programming Language :: Python :: 3.8
-    Programming Language :: Python :: 3.9
     Programming Language :: Python :: Implementation :: CPython
     Topic :: Scientific/Engineering :: Atmospheric Science
     Topic :: Scientific/Engineering :: Mathematics
@@ -45,9 +44,20 @@ install_requires =
     click~=7.1
     jinja2~=2.10
     numpy~=1.15
-    pybind11~=2.4
+    packaging>=20.0
+    pybind11~=2.5
     tabulate~=0.8
     typing-extensions~=3.7
+    # ---- eve / gtc ----
+    boltons>=20.0
+    clang-format>=9.0
+    cytoolz>=0.11
+    devtools>=0.5
+    mako>=1.1
+    networkx>=2.4
+    pydantic>=1.5
+    toolz>=0.11
+    xxhash>=1.4.4
 
 [options.packages.find]
 where = src
@@ -106,6 +116,7 @@ warning-is-error = True
 # Some sane defaults for the code style checker flake8
 max-line-length = 100
 max-complexity = 15
+doctests=true
 ignore =
     B008    # Do not perform function calls in argument defaults
     D1      # Public code object needs docstring
@@ -144,9 +155,22 @@ use_parentheses = true
 lines_after_imports = 2
 default_section = THIRDPARTY
 sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
-known_first_party = gt4py,__externals__,__gtscript__
-known_third_party = attr,black,cached_property,click,dawn4py,hypothesis,jinja2,numpy,pkg_resources,pybind11,pytest,setuptools,tabulate,typing_extensions
+known_first_party = eve,gtc,gt4py,__externals__,__gtscript__
+known_third_party = attr,black,boltons,cached_property,click,dawn4py,devtools,hypothesis,jinja2,mako,numpy,packaging,pkg_resources,pybind11,pydantic,pytest,setuptools,tabulate,tests,typing_extensions,xxhash
 
 [mypy]
 follow_imports = silent
 ignore_missing_imports = True
+# TODO enable in a next step
+#allow_redefinition = True
+#show_column_numbers = True
+#strict_optional = True
+#warn_return_any = True
+#warn_unused_configs = True
+#warn_unused_ignores = True
+
+[mypy-eve.*]
+allow_untyped_defs = False
+
+[mypy-gtc.*]
+allow_untyped_defs = False
