--- a/setup.cfg
+++ b/setup.cfg
@@ -82,6 +82,8 @@ cuda102 =
     cupy-cuda102
 dawn =
     dawn4py@git+https://github.com/MeteoSwiss-APN/dawn.git@0.0.2#subdirectory=dawn
+format =
+    clang-format>=9.0
 testing =
     hypothesis>=4.14
     pytest~=6.1
