Make clang_format package optional (#311)
The clang-format package is not supported on the Mac yet (see mgevaert/clang-format-wheel#2). This PR makes it optional and adds a env var to set the clang-format executable name.

Co-authored-by: Enrique G. Paredes <enriqueg@cscs.ch>

--- a/setup.cfg
+++ b/setup.cfg
@@ -50,7 +50,6 @@ install_requires =
     typing-extensions~=3.7
     # ---- eve / gtc ----
     boltons>=20.0
-    clang-format>=9.0
     cytoolz>=0.11
     devtools>=0.5
     mako>=1.1
@@ -83,6 +82,8 @@ cuda102 =
     cupy-cuda102
 dawn =
     dawn4py@git+https://github.com/MeteoSwiss-APN/dawn.git@0.0.2#subdirectory=dawn
+format =
+    clang-format>=9.0
 testing =
     hypothesis>=4.14
     pytest~=6.1
