--- a/setup.cfg
+++ b/setup.cfg
@@ -157,7 +157,7 @@ lines_after_imports = 2
 default_section = THIRDPARTY
 sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 known_first_party = eve,gtc,gt4py,__externals__,__gtscript__
-known_third_party = attr,black,boltons,cached_property,click,dawn4py,devtools,hypothesis,jinja2,mako,numpy,packaging,pkg_resources,pybind11,pydantic,pytest,setuptools,tabulate,typing_extensions,xxhash
+known_third_party = attr,black,boltons,cached_property,click,dawn4py,devtools,hypothesis,jinja2,mako,numpy,packaging,pkg_resources,pybind11,pydantic,pytest,setuptools,tabulate,tests,typing_extensions,xxhash
 
 [mypy]
 follow_imports = silent
