--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,9 @@
 include:
   - remote: 'https://gitlab.com/cscs-ci/recipes/-/raw/master/templates/v2/.cscs.yml'
 
-.py36: &py36
-  PYVERSION_PREFIX: py36
-  PYVERSION: 3.6.12
-
-.py37: &py37
-  PYVERSION_PREFIX: py37
-  PYVERSION: 3.7.9
+.py39: &py39
+  PYVERSION_PREFIX: py39
+  PYVERSION: 3.9.1
 
 .py38: &py38
   PYVERSION_PREFIX: py38
@@ -42,15 +38,10 @@ build py38:
     - staging
     - trying
 
-build py37:
+build py39:
   extends: build py38
   variables:
-    <<: *py37
-
-build py36:
-  extends: build py38
-  variables:
-    <<: *py36
+    <<: *py39
 
 test py38:
   extends: .daint
@@ -72,17 +63,12 @@ test py38:
     SLURM_TIMELIMIT: 120
     <<: *py38
 
-test py37:
+test py39:
+  allow_failure: true
   extends: test py38
-  needs: ["build py37"]
+  needs: ["build py39"]
   variables:
-    <<: *py37
-
-test py36:
-  extends: test py38
-  needs: ["build py36"]
-  variables:
-    <<: *py36
+    <<: *py39
 
 notify_github_success:
   stage: cleanup
