--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -117,6 +117,7 @@ repos:
           src/gt4py/ir/utils.py |
           src/gt4py/stencil_object.py |
           src/gt4py/utils/meta.py |
+          src/gtc_unstructured/irs/nir_to_usid.py |
           tests/definitions.py |
           tests/test_integration/stencil_definitions.py |
           tests/test_integration/test_code_generation.py |
