--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,6 +55,7 @@ test py38:
   image: $CI_REGISTRY_IMAGE/gt4py-ci/image:$PYVERSION
   script: 
     - python -c "import cupy"
+    - pip install clang-format
     - tox --sitepackages -r -e $PYVERSION_PREFIX-cuda101
   variables:
     CRAY_CUDA_MPS: 1
