--- a/setup.cfg
+++ b/setup.cfg
@@ -88,6 +88,8 @@ testing =
     hypothesis>=4.14
     pytest~=6.1
     tox~=3.14
+unstructured =
+    atlas4py@git+https://github.com/GridTools/atlas4py.git@master
 
 [options.entry_points]
 # CLI entry points to be installed
