--- a/setup.cfg
+++ b/setup.cfg
@@ -55,7 +55,8 @@ install_requires =
     mako>=1.1
     networkx>=2.4
     pydantic>=1.5
-    toolz>=0.11
+    toolz>=0.11 
+    typing_inspect>=0.6.0
     xxhash>=1.4.4
 
 [options.packages.find]
