--- a/.github/workflows/gtc-unstructured-cpp.yml
+++ b/.github/workflows/gtc-unstructured-cpp.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v1
       - name: Install eve and dependencies
         run: |
-          python3 -m pip install .[format,unstructured]
+          python3 -m pip install .[format]
           python3 -m pip install -r requirements_dev.txt # TODO remove (once we don't include debugtools)
       - name: Test cpputil
         run: |
