--- a/setup.cfg
+++ b/setup.cfg
@@ -55,7 +55,8 @@ install_requires =
     mako>=1.1
     networkx>=2.4
     pydantic>=1.5
-    toolz>=0.11
+    toolz>=0.11 
+    typing_inspect>=0.6.0
     xxhash>=1.4.4
 
 [options.packages.find]
@@ -157,7 +158,7 @@ lines_after_imports = 2
 default_section = THIRDPARTY
 sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 known_first_party = eve,gtc,gt4py,__externals__,__gtscript__
-known_third_party = attr,black,boltons,cached_property,click,dawn4py,devtools,hypothesis,jinja2,mako,numpy,packaging,pkg_resources,pybind11,pydantic,pytest,setuptools,tabulate,tests,typing_extensions,xxhash
+known_third_party = attr,black,boltons,cached_property,click,dawn4py,devtools,hypothesis,jinja2,mako,networkx,numpy,packaging,pkg_resources,pybind11,pydantic,pytest,setuptools,tabulate,tests,typing_extensions,typing_inspect,xxhash
 
 [mypy]
 follow_imports = silent
