Add eve unit tests and update tool configs

--- a/setup.cfg
+++ b/setup.cfg
@@ -95,25 +95,38 @@ testing =
 console_scripts =
     gtpyc = gt4py.cli:gtpyc
 
-[test]
-# py.test options when running `python setup.py test`
-# addopts = --verbose
-extras = True
 
-[tool:pytest]
-# Options for py.test:
-# Specify command line options as you would do when invoking py.test directly.
-norecursedirs =
-    dist
-    build
-    .tox
-testpaths = tests
 
-[build_sphinx]
-source_dir = docs
-build_dir = build/sphinx
-warning-is-error = True
+#-- coverage --
+[coverage:run]
+branch = True
+source_pkgs =
+    eve
 
+[coverage:paths]
+source =
+    src/
+    .tox/*/site-packages/
+
+[coverage:report]
+# Regexes for lines to exclude from consideration
+exclude_lines =
+    # Don't complain if tests don't hit defensive assertion code:
+    raise AssertionError
+    raise NotImplementedError
+
+    # Don't complain if non-runnable code isn't run:
+    if 0:
+    if __name__ == .__main__.:
+
+ignore_errors = True
+
+[coverage:html]
+directory = tests/_reports/coverage_html
+
+
+
+#-- flake8 --
 [flake8]
 # Some sane defaults for the code style checker flake8
 max-line-length = 100
@@ -145,6 +158,8 @@ rst-roles=
     py:exc, exc,
     py:obj, obj,
 
+
+#-- isort --
 [tool:isort]
 skip_glob =
     *.venv/**
@@ -160,6 +175,8 @@ sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 known_first_party = eve,gtc,gt4py,__externals__,__gtscript__
 known_third_party = attr,black,boltons,cached_property,click,dawn4py,devtools,hypothesis,jinja2,mako,networkx,numpy,packaging,pkg_resources,pybind11,pydantic,pytest,setuptools,tabulate,tests,typing_extensions,typing_inspect,xxhash
 
+
+#-- mypy --
 [mypy]
 follow_imports = silent
 ignore_missing_imports = True
@@ -176,3 +193,24 @@ allow_untyped_defs = False
 
 [mypy-gtc.*]
 allow_untyped_defs = False
+
+
+#-- pytest --
+[tool:pytest]
+# Set coverage options but do not run it by default (only tox does)
+addopts = --cov-config=setup.cfg --cov-report html
+markers =
+    lit_suite: pytest item running a LLVM-lit test suite
+norecursedirs =
+    dist
+    build
+    _local*
+    .*
+testpaths = tests
+
+
+#-- sphinx --
+#[build_sphinx]
+#source_dir = docs
+#build_dir = build/sphinx
+#warning-is-error = True
