Add missing passenv vars to tox config

--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ commands =
     !cpu: pytest -v {posargs}
     pytest --doctest-modules --cov --cov-append {envsitepackagesdir}/eve
 
-passenv = BOOST_ROOT BOOST_HOME CUDA_HOME CUDA_PATH CXX CC OPENMP_CPPFLAGS OPENMP_LDFLAGS
+passenv = BOOST_ROOT BOOST_HOME CUDA_HOME CUDA_PATH CXX CC OPENMP_CPPFLAGS OPENMP_LDFLAGS PIP_USER PYTHONUSERBASE
 
 whitelist_externals =
     /bin/bash
