Update cpputil to no mesh

--- a/src/gtc_unstructured/cpp_util/unstructured/CMakeLists.txt
+++ b/src/gtc_unstructured/cpp_util/unstructured/CMakeLists.txt
@@ -1,19 +1,16 @@
 cmake_minimum_required(VERSION 3.14.5)
-project(unstructured_interface LANGUAGES CXX)
+project(usid LANGUAGES CXX)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake/private")
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 17)
 
 add_compile_options(-Wall)
-#add_compile_options(-Wall -Wextra -pedantic -Wno-sign-compare)
-
 
 include(CheckLanguage)
 check_language(CUDA)
 if(CMAKE_CUDA_COMPILER)
     enable_language(CUDA)
-    # set(CMAKE_CUDA_STANDARD 17)
 endif()
 
 include(FetchContent)
@@ -24,31 +21,22 @@ FetchContent_Declare(GridTools
 )
 FetchContent_MakeAvailable(GridTools)
 
-add_library(gtnext INTERFACE)
-target_include_directories(gtnext INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
-
-add_executable(prototype prototype.cc)
-target_link_libraries(prototype GridTools::gridtools)
-target_include_directories(prototype PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
-
-# find_package(eckit REQUIRED)
-find_package(Atlas REQUIRED PATHS $ENV{ATLAS_INSTALL_DIR})
-
-add_executable(atlas_mesh_adapter atlas_mesh_adapter.cc)
-target_link_libraries(atlas_mesh_adapter atlas GridTools::gridtools)
-target_include_directories(atlas_mesh_adapter PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
-
-add_executable(atlas_field_converter atlas_field_converter.cc)
-target_link_libraries(atlas_field_converter atlas GridTools::gridtools)
-target_include_directories(atlas_field_converter PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
+add_library(usid_cpu INTERFACE)
+target_include_directories(usid_cpu INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_link_libraries(usid_cpu INTERFACE GridTools::gridtools)
+target_compile_features(usid_cpu INTERFACE cxx_std_17)
+add_library(GridTools::usid_cpu ALIAS usid_cpu)
 
 if(CMAKE_CUDA_COMPILER)
-  add_executable(atlas_field_converter_cuda atlas_field_converter.cu)
-  target_link_libraries(atlas_field_converter_cuda atlas GridTools::storage_gpu)
-  target_include_directories(atlas_field_converter_cuda PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
-  target_compile_options(atlas_field_converter_cuda PRIVATE "-std=c++17")
-  target_compile_options(atlas_field_converter_cuda PRIVATE "-arch=sm_50")
+    add_library(usid_gpu INTERFACE)
+    target_include_directories(usid_gpu INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
+    target_link_libraries(usid_gpu INTERFACE GridTools::storage_gpu)
+    target_compile_features(usid_gpu INTERFACE cxx_std_17)
+    target_compile_features(usid_gpu INTERFACE cuda_std_17)
+    add_library(GridTools::usid_gpu ALIAS usid_gpu)
 endif()
+
+find_package(Atlas REQUIRED PATHS $ENV{ATLAS_INSTALL_DIR})
 
 if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
     include(CTest)
