--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,8 @@
-# This file is used to configure your project.
-# Read more about the various options under:
+# This file is mainly used to configure package creation with setuptools.
+# Documentation:
 # http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
+#
+# Additionally, it stores settings of other development tools (linters, type checkers, etc..
 
 [metadata]
 name = gt4py
@@ -55,7 +57,7 @@ install_requires =
     mako>=1.1
     networkx>=2.4
     pydantic>=1.5
-    toolz>=0.11 
+    toolz>=0.11
     typing_inspect>=0.6.0
     xxhash>=1.4.4
 
@@ -96,6 +98,7 @@ console_scripts =
     gtpyc = gt4py.cli:gtpyc
 
 
+#---- Development tools ----
 
 #-- coverage --
 [coverage:run]
@@ -125,7 +128,6 @@ ignore_errors = True
 directory = tests/_reports/coverage_html
 
 
-
 #-- flake8 --
 [flake8]
 # Some sane defaults for the code style checker flake8
@@ -138,15 +140,21 @@ ignore =
     DAR     # Disable dargling errors by default
     E203    # Whitespace before ':' (black formatter breaks this sometimes)
     E501    # Line too long (using Bugbear's B950 warning)
-    N802    # Function name should be lowercase
     W503    # Line break occurred before a binary operator
 
 exclude =
+    .eggs
+    .gt_cache
+    .ipynb_checkpoints
     .tox
+    _local_
     build
     dist
-    .eggs
-    docs/conf.py
+    docs
+    _external_src
+    tests/_disabled
+    setup.py
+
 rst-roles=
     py:mod, mod,
     py:func, func,
