Update dev tool configs
Main changes:
- tox (and affected CI configs): more sensible organization of environments using factors, better cache cleaning and using 4 processes for pytest
- flake8: added missing configuration (setup.cfg)
- flakehell (flake8 wrapper): added config (pyproject.toml)
- requirements-dev: added missing packages and useful pytest plugins (cache, xdist)

--- a/.github/workflows/gt4py-tox.yml
+++ b/.github/workflows/gt4py-tox.yml
@@ -38,4 +38,4 @@ jobs:
           pyversion_no_dot="${{ matrix.python-version }}"
           pyversion_no_dot="${pyversion_no_dot/./}"
           pip install tox clang-format
-          tox -r -e py${pyversion_no_dot}-cpu
+          tox -r -e py${pyversion_no_dot}-internal-cpu -- -n 4
